--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <!-- Twitter cards -->
-<meta name="twitter:site"    content="@{{ site.twitter_username }}">
-<meta name="twitter:creator" content="@{{ page.author }}">
+<meta name="twitter:site"    content="@ankurious">
+<meta name="twitter:creator" content="@ankurious">
 <meta name="twitter:title"   content="{{ page.title }}">
 
 {% if page.summary %}
