--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,19 +1,6 @@
-<!-- Twitter cards -->
-<meta name="twitter:site"    content="@ankurious">
-<meta name="twitter:creator" content="@ankurious">
-<meta name="twitter:title"   content="{{ page.title }}">
-
-{% if page.summary %}
-<meta name="twitter:description" content="{{ page.summary }}">
-{% else %}
-<meta name="twitter:description" content="{{ site.description }}">
-{% endif %}
-
-{% if page.image %}
-<meta name="twitter:card"  content="summary_large_image">
-<meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
-{% else %}
-<meta name="twitter:card"  content="summary">
-<meta name="twitter:image" content="{{ site.title_image }}">
-{% endif %}
-<!-- end of Twitter cards -->
+<!-- Enables twitter cards on posts -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@ankurious" />
+<meta name="twitter:title" content="{{ page.title }}" />
+<meta name="twitter:description" content="{{ page.excerpt | escape }}" />
+<meta name="twitter:url" content="{{ page.url }}" />
