--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 comments: true
 ---
-{% include twitter_card.html %}
+{% include head.html %}
 
 <article class="post">
   <h2>{{ page.title }}</h2> 
