--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,13 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 <link rel="icon"  type="image/png"    href="https://avatars3.githubusercontent.com/u/890190?v=3">
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5866178983235664",
+    enable_page_level_ads: true
+  });
+</script>
   </head>
 
   <body>
