--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>            
+            <a href="{{ site.baseurl }}/portfolio">Portfolio</a>    
+             <a href="{{ site.baseurl }}/about">About</a>  
+            <a href="{{ site.baseurl }}/">Blog</a>                     
             <a href="{{ site.baseurl }}/contact">Contact</a>
           
           </nav>
